refactor: ApplyService의 updateApply() 메서드에서 유효성 검증 로직 메서드로 추출