@@ -4,6 +4,7 @@ import com.hong.forapw.controller.dto.ApplyRequest;
 import com.hong.forapw.controller.dto.ApplyResponse;
 import com.hong.forapw.core.errors.CustomException;
 import com.hong.forapw.core.errors.ExceptionCode;
+import com.hong.forapw.core.utils.mapper.ApplyMapper;
 import com.hong.forapw.domain.animal.Animal;
 import com.hong.forapw.domain.apply.Apply;
 import com.hong.forapw.domain.user.User;
@@ -16,7 +17,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.hong.forapw.core.utils.mapper.ApplyMapper.buildApply;
 
@@ -48,35 +48,19 @@ public class ApplyService {
         return new ApplyResponse.CreateApplyDTO(apply.getId());
     }
 
-    @Transactional(readOnly = true)
     public ApplyResponse.FindApplyListDTO findApplyList(Long userId) {
         List<Apply> applies = applyRepository.findAllByUserIdWithAnimal(userId);
 
         List<ApplyResponse.ApplyDTO> applyDTOS = applies.stream()
-                .map(apply -> new ApplyResponse.ApplyDTO(
-                        apply.getId(),
-                        apply.getAnimal().getId(),
-                        apply.getAnimal().getName(),
-                        apply.getAnimal().getKind(),
-                        apply.getAnimal().getGender(),
-                        apply.getAnimal().getAge(),
-                        apply.getName(),
-                        apply.getTel(),
-                        apply.getRoadNameAddress(),
-                        apply.getAddressDetail(),
-                        apply.getZipCode(),
-                        apply.getStatus()))
-                .collect(Collectors.toList());
+                .map(ApplyMapper::toApplyDTO)
+                .toList();
 
         return new ApplyResponse.FindApplyListDTO(applyDTOS);
     }
 
     @Transactional
     public void updateApply(ApplyRequest.UpdateApplyDTO requestDTO, Long applyId, Long userId) {
-        // 지원하지 않았거나, 권한이 없으면 에러
-        if (!applyRepository.existsByApplyIdAndUserId(applyId, userId)) {
-            throw new CustomException(ExceptionCode.APPLY_NOT_FOUND);
-        }
+        validateUserIsApplicant(applyId, userId);
 
         Apply apply = applyRepository.findById(applyId).orElseThrow(
                 () -> new CustomException(ExceptionCode.APPLY_NOT_FOUND)
@@ -91,12 +75,8 @@ public class ApplyService {
 
     @Transactional
     public void deleteApply(Long applyId, Long userId) {
-        // 지원하지 않았거나, 권한이 없으면 에러
-        if (!applyRepository.existsByApplyIdAndUserId(applyId, userId)) {
-            throw new CustomException(ExceptionCode.APPLY_NOT_FOUND);
-        }
+        validateUserIsApplicant(applyId, userId);
 
-        // 동물의 문의 횟수 감소
         Animal animal = applyRepository.findAnimalIdById(applyId).orElseThrow(
                 () -> new CustomException(ExceptionCode.ANIMAL_NOT_FOUND)
         );
@@ -114,6 +94,12 @@ public class ApplyService {
     private void validateNoPreviousApplication(Long userId, Long animalId) {
         if (applyRepository.existsByUserIdAndAnimalId(userId, animalId)) {
             throw new CustomException(ExceptionCode.ANIMAL_ALREADY_APPLY);
+        }
+    }
+
+    private void validateUserIsApplicant(Long applyId, Long userId) {
+        if (!applyRepository.existsByApplyIdAndUserId(applyId, userId)) {
+            throw new CustomException(ExceptionCode.APPLY_NOT_FOUND);
         }
     }
 }
